fix: Fix scroll to refresh on mobile chrome

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,12 @@
+html,
+body {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    /* fallback for Js load */
+    height: var(--doc-height);
+}
+
 .w-12px {
     width: 12px;
     min-width: 12px;
